# literate-broccoli

./: .dockerignore  .env.example  .gitignore  IMPLEMENTATION_CHECKLIST.md  QUICKSTART.md  README.md  SECURITY.md  pyproject.toml  requirements.txt  setup.py  startup.sh
.claude/: settings.local.json
.github/checklists/: 2026-02-18-initial-project-spec.md  2026-02-18-project-summary.md  2026-02-18-verification.md  2026-03-06-rework-of-repo-plan.md  2026-03-08-web-app-planning.md
.github/workflows/: ci-cd.yml  menu-scraper.yml
azure/bicep/: main.bicep
azure/scripts/: deploy.sh
docs/: ARCHITECTURE.md  example_slides.md  index.html  index.qmd
lunch-web-app/: .dockerignore  Dockerfile  requirements.txt
lunch-web-app/automation/: menu_hashes.json  restaurants.yml
lunch-web-app/backend/: cached_menus.py  config.py  main.py  models.py  scraper_schemas.py  sessions.py
lunch-web-app/frontend/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo
scripts/: capture_screenshots.py  generate_cached_menus.py  scrape_and_compare.py
slides/: index.qmd
slides/scripts/: capture-screenshots.R
src/: __init__.py  config.py  server.py
src/cards/: poll.py
src/models/: database.py  schemas.py
src/scraper/: browse.py  extract.py  fetch.py  search.py  search_restaurants.py
src/tools/: menu.py
teams-app/: README.md  manifest.json
teams-lunch-bot/: .env.example  DEPLOYMENT.md  app.py  bot.py  config.py  requirements.txt  startup.sh
tests/: test_browse.py  test_extract.py  test_menu_pipeline_e2e.py  test_models.py  test_poll_card.py  test_server.py
(+29 files in other folders)
