[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "literate-broccoli"
version = "0.1.0"
description = "Automation and backend support dependencies for lunch-web-app workflows"
requires-python = ">=3.12"
dependencies = [
  "httpx>=0.26.0",
  "beautifulsoup4>=4.12.0",
  "lxml>=5.1.0",
  "pymupdf>=1.25.0",
  "openai>=1.61.0",
  "google-genai>=1.0.0",
  "pydantic>=2.5.0",
  "pydantic-settings>=2.1.0",
  "python-dotenv>=1.0.0",
  "PyYAML>=6.0.0",
  "uvicorn>=0.27.0"
]

[tool.setuptools]
py-modules = []
